--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="main-body">
       <div class="video-container">
-        <a href="http://127.0.0.1:5501/page1.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-1.jpg"></a>
+        <a href="https://wicked-insomniac.github.io/Subhajit-Das/page1.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-1.jpg"></a>
         
         <div class="container-bottom">
           <div class="about-anime">
@@ -62,7 +62,7 @@
       </div>
 
       <div class="video-container">
-        <a href="http://127.0.0.1:5501/page2.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-2.png"></a>
+        <a href="https://wicked-insomniac.github.io/Subhajit-Das/page2.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-2.png"></a>
         <div class="container-bottom">
           <div class="about-anime">
             <p class="anime-name">Solo Leveling</p>
@@ -77,7 +77,7 @@
       </div>
 
       <div class="video-container">
-        <a href="http://127.0.0.1:5501/page3.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-3.png"></a>
+        <a href="https://wicked-insomniac.github.io/Subhajit-Das/page3.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-3.png"></a>
         <div class="container-bottom">
           <div class="about-anime">
             <p class="anime-name">Attack on Titan</p>
@@ -92,7 +92,7 @@
       </div>
 
       <div class="video-container">
-        <a href="http://127.0.0.1:5501/page4.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-4.jpg"></a>
+        <a href="https://wicked-insomniac.github.io/Subhajit-Das/page4.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-4.jpg"></a>
         <div class="container-bottom">
           <div class="about-anime">
             <p class="anime-name">Boruto</p>
@@ -107,7 +107,7 @@
       </div>
 
       <div class="video-container">
-        <a href="http://127.0.0.1:5501/page5.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-5.jpg"></a>
+        <a href="https://wicked-insomniac.github.io/Subhajit-Das/page5.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-5.jpg"></a>
         <div class="container-bottom">
           <div class="about-anime">
             <p class="anime-name">Death Note</p>
@@ -122,7 +122,7 @@
       </div>
 
       <div class="video-container">
-        <a href="http://127.0.0.1:5501/page6.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-6.jpg"></a>
+        <a href="https://wicked-insomniac.github.io/Subhajit-Das/page6.html"><img class="anime-thumbnail" src="icons/thumbnails/thumbnail-6.jpg"></a>
         <div class="container-bottom">
           <div class="about-anime">
             <p class="anime-name">Spy Family</p>
